option java_package = "com.hawk.game.protocol";

// ------------------------------------------------------- struct -------------------------------------------------------

// 用于同步物品信息
message ItemInfo
{
	required int64  id = 1;
	required string  itemId = 2;
	required int32  count = 3;
	required int32  status = 4;
}

// ------------------------------------------------------- protocol-----------------------------------------------------

// 同步所有物品信息
message HSItemInfoSync
{
	repeated ItemInfo itemInfos = 1;
}

// 使用道具
message HSItemUse
{
	required string itemId = 1;
}

// 使用道具
message HSItemUseRet
{
	required string itemId = 1;
}

// 购买道具
message HSItemBuy
{
	required string itemId = 1;	
	required int32 itemCount = 2;
}

// 购买道具返回
message HSItemBuyRet
{
	required string itemId = 1;	
	required int32 itemCount = 2;
}

// 合成道具
message HSItemCompose
{
	required string itemId = 1;
}

// 合成道具返回
message HSItemComposeRet
{
	required string itemId = 1;
}